--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -8,6 +8,10 @@
   open: 2023-08-29
   due: 2023-09-08
   page: labhw/warmup.html
+  grade_describe: |
+    When the output below indicates "not yet graded" that means your output did not match
+    something the autograder recognized. Usually, this means something is wrong, but we
+    will eventually have a human grader look at it to determine what to do.
   submit_files:
   - Makefile
   - makefile
