--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -208,7 +208,7 @@
 
 - date: 2023-10-05
   week: 7
-  title: caches 1
+  title: secure channels 3 / caches 1
   reading: "secure channels 3 / [cache](readings/cache.html) §1-5"
   slides: yes
   slides_prelim: yes
