--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -79,12 +79,6 @@
   - "*.txt"
   - "*.gz"
 
-- name: networking
-  lab: true
-  page: labhw/networking.html
-  submit_file: "*.c"
-  due: 2023-09-27
-
 - name: pagetable 2 (pre code review)
   short_name: pagetable2
   page: labhw/pagetable.html
@@ -112,6 +106,13 @@
   - "Makefile"
   - "makefile"
   - "*.txt"
+
+- name: fork lab
+  short_name: fork-lab
+  lab: true
+  page: labhw/fork-lab.html
+  submit_file: "*.c"
+  due: 2023-09-27
 
 - name: code reviews
   lab: true
@@ -153,34 +154,26 @@
   - "*.txt"
   - "*.gz"
 
-- name: secure channels lab
-  lab: true
-  short_name: securechannel
-  removed_page: labhw/signatures.html
-  page: labhw/secure-channel.html
-  due: 2023-10-11
-  submit_file: attack.c
-
 - name: cache exercises
   short_name: cachelab
   old_page: labhw/memoize.html
   page: labhw/cache-lab.html
   missing-if-no-feedback: true
   lab: true
-  due: 2023-10-18
+  due: 2023-10-11
 
-- name: fork lab
-  short_name: fork-lab
-  lab: true
-  page: labhw/fork-lab.html
-  submit_file: "*.c"
-  due: 2023-10-25
 
-- name: cache programs
-  short_name: cache-programs
-  page: labhw/cache-programs.html
-  submit_file: "*submit*.tar"
-  due: 2023-10-27
+- name: fork HW
+  short_name: fork
+  comment: "FIXUP: missing HW?"
+  comment: for pipelines? after covered in lecture?
+  page: labhw/fork.html
+  grade_describe: |
+    If all tests fail/do not run, it may be because you included a `main()` function that interferes with our testing code,
+    or because you did not define both `getoutput` and `parallelgetoutput` so our testing code will link successfully.
+  submit_file: "fork_run.c"
+  due: 2023-10-13
+
 
 - name: sync games
   lab: true
@@ -189,9 +182,22 @@
   comments: needs changes for in-person?
   comments: need .php stuff
   XXX-missing-if-no-feedback: true
-  due: 2023-11-01
+  due: 2023-10-18
 
+- name: cache programs
+  short_name: cache-programs
+  page: labhw/cache-programs.html
+  submit_file: "*submit*.tar"
+  due: 2023-10-20
 
+- name: openmp
+  short_name: openmp
+  lab: true
+  page: labhw/openmp.html
+  submit_files:
+  - "*.c"
+  - "performance.txt"
+  due: 2023-10-25
 
 - name: TLB
   short_name: tlb
@@ -203,7 +209,7 @@
   - "Makefile"
   - "makefile"
   - "*.txt"
-  due: 2023-11-03
+  due: 2023-10-27
 
 - name: pthreads (dining philosophers) 
   lab: true
@@ -219,32 +225,18 @@
   - dp-arb.c
   - dp-rh.c
   - dp-mp.c
-  due: 2023-11-08
+  due: 2023-11-01
 
-- name: fork HW
-  short_name: fork
-  comment: "FIXUP: missing HW?"
-  comment: for pipelines? after covered in lecture?
-  page: labhw/fork.html
-  grade_describe: |
-    If all tests fail/do not run, it may be because you included a `main()` function that interferes with our testing code,
-    or because you did not define both `getoutput` and `parallelgetoutput` so our testing code will link successfully.
-  submit_file: "fork_run.c"
-  due: 2023-11-10
-
-- name: openmp
-  short_name: openmp
+- name: networking
   lab: true
-  page: labhw/openmp.html
-  submit_files:
-  - "*.c"
-  - "performance.txt"
-  due: 2023-11-15
+  page: labhw/networking.html
+  submit_file: "*.c"
+  due: 2023-11-08
 
 - name: life
   short_name: life
   page: labhw/life.html
-  due: 2023-11-17
+  due: 2023-11-10
   submit_file: "life-parallel.c"
   comment: may need skeleton code to be modified
   comment: adjust skeleton code to avoid workarounds
@@ -252,18 +244,26 @@
   comment: sanitize-examples.sh script
   comment: ThreadSanitizer stuff
 
-- name: side channel
-  short_name: side-channel
+- name: secure channels lab
   lab: true
-  page: labhw/side-channel.html
-  submit_file: "lab.c"
-  due: 2023-11-29
+  short_name: securechannel
+  removed_page: labhw/signatures.html
+  page: labhw/secure-channel.html
+  due: 2023-11-15
+  submit_file: attack.c
 
 - name: pipeline
   short_name: pipeline
   page: labhw/pipeline.html
   feedback: "extracted*,autograder*"
   missing-if-no-feedback: true
+  due: 2023-11-17
+
+- name: side channel
+  short_name: side-channel
+  lab: true
+  page: labhw/side-channel.html
+  submit_file: "lab.c"
   due: 2023-11-29
 
 - name: C++ OR templates
@@ -281,8 +281,8 @@
 - name: OOO
   short_name: OOO
   page: labhw/ooo-exercise.html
-  due: 2023-12-05
+  due: 2023-12-01
   missing-if-no-feedback: true
   feedback: "extracted*,autograder*"
   no-late: true
-  due_message: OOO due <em>before lecture time</em>, late submissions <em>not normally accepted</em>
+  xxdue_message: OOO due <em>before lecture time</em>, late submissions <em>not normally accepted</em>
